# ForecastathonMitraExploration

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  debug_comparison.py  inconsistency_analysis_results.md  pyproject.toml  requirements.txt  setup.py  test_hmac_verification.py
.github/workflows/: ci.yml
autogluon_models/mitra_loop_2/: metadata.json
autogluon_models/mitra_loop_3/: version.txt
config/: data_config.yaml  experiment_config.yaml  logging_config.yaml  model_config.yaml
config/schemas/: data_config_schema.json  experiment_config_schema.json  logging_config_schema.json  model_config_schema.json
config/templates/: experiment_config_dev.yaml  experiment_config_prod.yaml  model_config_dev.yaml  model_config_prod.yaml
docs/: type_hints_serialization.md
experiments/: mlflow.db
experiments/mlflow_runs/: .gitkeep
logs/data_validation/: .gitkeep
logs/model_training/: .gitkeep
logs/pipeline_state/: .gitkeep
models/lstm/: .gitkeep
models/mitra/: .gitkeep
models/naive_bayes/: .gitkeep
models/xgboost/: .gitkeep
notebooks/: .gitkeep  01_data_prep_feature_engineering.py  02_baseline_naive_bayes.py  03_model_xgboost.py  04_model_lstm.py  05_model_mitra_tfm.py  06_model_comparison_and_trading.py
scripts/: document_linter.py
scripts/debug/: debug_comparison.py
src/: __init__.py
src/data/: __init__.py  loaders.py  preprocessors.py  profilers.py  splitters.py  structs.py  validators.py
src/evaluation/: __init__.py  calibration.py  comparison.py  comparison.py.backup  metrics.py
src/features/: __init__.py  discretization.py  engineering.py  regime_detection.py  selection.py  technical_indicators.py
src/models/: __init__.py  base_model.py  ensemble.py  lstm_model.py  mitra_model.py  naive_bayes.py  xgboost_model.py
src/trading/: __init__.py  portfolio.py  (+1 more)
tests/: __init__.py  conftest.py  test_config_manager_property.py  test_lstm_model.py  test_mitra_model.py  test_naive_bayes.py  test_serialization_property.py  test_xgboost_model.py
(+46 files in other folders)
